# z-soar-materials

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  __init__.py  pyproject.toml  pyrightconfig.json
.github/workflows/: build.yml
delphi/: __init__.py  __main__.py  config.py  pipeline.py  umap_latent_patterns.py  umap_latent_patterns_pyvis.py  utils.py
delphi/activation_plots/: umap_coact_matr_jaccard_0.05_edge_counts.csv  umap_coact_matr_jaccard_0.05_network_stats.txt  umap_coact_sae_jaccard_0.05_edge_counts.csv  umap_coact_sae_jaccard_0.05_network_stats.txt
delphi/activation_plots_pyvis/: umap_coact_edge_counts.csv  umap_coact_matr_edge_counts.csv  umap_coact_matr_network_pyvis.html  umap_coact_matr_network_stats.txt  umap_coact_network_pyvis.html  umap_coact_network_stats.txt
delphi/clients/: client.py  offline.py  openrouter.py  types.py
delphi/explainers/: __init__.py  contrastive_explainer.py  explainer.py  no_op_explainer.py
delphi/latents/: cache.py  collect_activations.py  constructors.py  latents.py  loader.py  samplers.py
delphi/log/: result_analysis.py
delphi/scorers/: __init__.py
delphi/scorers/classifier/: classifier.py  detection.py  fuzz.py  intruder.py  sample.py
delphi/scorers/classifier/prompts/: intruder_prompt.py
delphi/scorers/embedding/: embedding.py  example_embedding.py
delphi/scorers/simulator/: oai_simulator.py
delphi/scorers/simulator/oai_autointerp/activations/: activation_records.py  activations.py
delphi/scorers/simulator/oai_autointerp/explanations/: explanations.py  few_shot_examples.py  scoring.py  simulator.py
delphi/scorers/surprisal/: surprisal.py
delphi/sparse_coders/: load_sparsify.py  sparse_model.py
delphi/tests/: client_test.py  e2e.py  pipeline.py
delphi/tests/test_autoencoders/: test_sparse_coders.py
delphi/tests/test_latents/: test_constructor.py
temperature/latents/layers.5/: config.json
tests/: client_test.py  conftest.py  e2e.py  pipeline.py
tests/test_latents/: test_cache.py  test_constructor.py
